<resources>
    <string name="app_name">Multiplication Application</string>
    <string name="multiplication_practice_app">Multiplication practice app !</string>
    <string name="generate">Generate</string>
    <string name="to">To:</string>
    <string name="tables_from">Tables from</string>
    <string name="tables_to">Tables to</string>
    <string name="no_of_questions">No. of questions</string>
    <string name="from">From:</string>
    <string name="question">Question:</string>
    <string name="questions">Questions:</string>
    <string name="multiply_the_numbers">Multiply the numbers</string>
    <string name="answer">Answer :</string>
    <string name="submit">Submit</string>
    <string name="your_score">Your Score</string>
</resources>
